Fix the leaderboard spacing

--- a/src/sass/_hud.scss
+++ b/src/sass/_hud.scss
@@ -250,7 +250,7 @@
     font-weight: bold;
     color: #fff;
     text-transform: uppercase;
-    margin-bottom: 15px;
+    margin-bottom: 12px;
   }
 
   &__rank {
